# Embedded-Linux

./: main.c  rcc.c  rcc.h  std_types.h
AdminLinux_Task1/: task1.md  task1.sh
AdminLinux_Task2/: task2.md
AdminLinux_Task3/: Task3.md  Task3.sh
AdminLinux_Task4/: app  app.c
AdminLinux_Task5/: Task5  Task5.c
AdminLinux_Task6/: process1  process1.c  process2  process2.c
AdminLinux_task7/: client.py  server.py
CPP_Task2/: CPP_Task2.cpp
CPP_Task4/: CPP_Task4.cpp  a.out  sensor.sh
CPP_Task5/: CMakeLists.txt  toolchain.cmake
CPP_Task5/app/: main.cpp
CPP_Task5/include/: GPIO.hpp  IStream.hpp  OStream.hpp  SevenSegment.hpp  Stream.hpp  TerminalStream.hpp
CPP_Task5/src/: GPIO.cpp  IStream.cpp  OStream.cpp  SevenSegment.cpp  Stream.cpp  TerminalStream.cpp
CPP_Task6/: main.cpp  output.txt
Embedded-Linux-Labs/Lab_1/: readme.md
Embedded-Linux-Labs/Lab_2/: readme.md
Embedded-Linux-Labs/Lab_3/: Makefile  boot.cmd  boot.scr  linker.ld  main.c  mostafa_blinky.elf  mostafa_blinky.img  readme.md  startup.s
RPI_Task/: GPIO.hpp  ledTest.cpp  test_gpio
Task2/: main  main.c
VsomeIP_Task1/: CMakeLists.txt
VsomeIP_Task1/config/: vsomeip-client.json  vsomeip-server.json
VsomeIP_Task1/src/: client.cpp  client.hpp  server.cpp  server.hpp
VsomeIP_Task2/: CMakeLists.txt
VsomeIP_Task2/config/: vsomeip-laptop.json  vsomeip-rpi.json
VsomeIP_Task2/include/: common_defs.hpp  laptop_client.hpp  rpi_server.hpp
VsomeIP_Task2/src/: gpio.cpp  laptop_client.cpp  rpi_server.cpp
